# gemini-live-demo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: linting.yml  npm_pr.yml  npm_publish.yml  test.yml  type_check.yml
python/: pyproject.toml
python/src/gemini_live_demo/: main.py  utils.py
python/tests/: test_utils.py
src/gemini_live_demo/: utils.py
tests/: test_utils.py
ts/: eslint.config.mts  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts  utils.ts
